--- a/README.adoc
+++ b/README.adoc
@@ -8,7 +8,7 @@
 Use it to unit-test link:https://appery.io[Appery.io] server code functions.
 
 Download::
-  icon:download[] {nbsp} link:distr/apperyunit-0.99.zip?dl=0[apperyunit-0.99.zip] {nbsp}(7.5M)
+  icon:download[] {nbsp} link:distr/apperyunit-1.00.zip?dl=0[apperyunit-1.00.zip] {nbsp}(7.5M)
 
 Source::
   icon:github[] {nbsp} https://github.com/a-services/apperyunit
@@ -29,7 +29,7 @@ More details can be found at <<supported-apis>> section.
 Shell script `au.sh` provided to demonstrate the usage of ApperyUnit.
 Use this script to run `helloappery.js` server code function:
 ```
-  ./au.sh r
+  ./au.sh
 ```
 
 To run the test in echo mode add `e` parameter:
@@ -44,10 +44,10 @@ To test the fixtures add `t` parameter:
 
 image:images/console-test.png[Console Test]
 
-Running without parameters starts application in GUI mode:
+To start the application in GUI mode use `w` parameter:
 
 ```
-  ./au.sh
+  ./au.sh w
 ```
 
 Or you can just double-click `apperyunit.jar` from the distribution to open GUI.
